--- a/assets/styles/3-components/_media-source.scss
+++ b/assets/styles/3-components/_media-source.scss
@@ -9,7 +9,7 @@
   @include transform(translateY(0));
   @include filter(grayscale(100%));
   transition: transform $defaultTransition ease, filter $defaultTransition*1.5 ease, box-shadow $defaultTransition*1.5 ease;
-  border: 1px solid $light-gray;
+  border: 1px solid $med-gray;
   outline-offset: -6px;
 
   &:hover,
