--- a/assets/styles/4-sections/_footer.scss
+++ b/assets/styles/4-sections/_footer.scss
@@ -11,6 +11,10 @@ footer .u-twoThirds {
   }
 }
 
+footer p a {
+  color: white;
+}
+
 .FooterUnorderedList {
   margin-top: $sm-padding;
   margin-bottom: $xs-padding;
